// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List renders ordered list 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <ol
      class="PicassoList-root PicassoList-numeral PicassoList-firstLevel"
      data-testid="ordered-list"
    >
      <li
        class=""
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="m-0 font-regular text-md text-graphite PicassoListItem-content"
          >
            list item N1
          </div>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="m-0 font-regular text-md text-graphite PicassoListItem-content"
          >
            list item N2
          </div>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="m-0 font-regular text-md text-graphite PicassoListItem-content"
          >
            list item N3
          </div>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="m-0 font-regular text-md text-graphite PicassoListItem-content"
          >
            list item N4
          </div>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="m-0 font-regular text-md text-graphite PicassoListItem-content"
          >
            list item N5
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`List renders unordered list 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <ul
      class="PicassoList-root PicassoList-unordered PicassoList-disc PicassoList-firstLevel"
      data-testid="unordered-list"
    >
      <li
        class=""
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="m-0 font-regular text-md text-graphite PicassoListItem-content"
          >
            list item N1
          </div>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="m-0 font-regular text-md text-graphite PicassoListItem-content"
          >
            list item N2
          </div>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="m-0 font-regular text-md text-graphite PicassoListItem-content"
          >
            list item N3
          </div>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="m-0 font-regular text-md text-graphite PicassoListItem-content"
          >
            list item N4
          </div>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="PicassoContainer-flex PicassoListItem-listContainer"
        >
          <div
            class="m-0 font-regular text-md text-graphite PicassoListItem-content"
          >
            list item N5
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
